# test_repo

./: .clang-format  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: ci.yml  ci_android.yml  ci_ios.yml  ci_ios_test.yml  ci_macos.yml  codeql-analysis.yml  test-windows-signing.yml
app/: README.md  inoo_compiler_ci.iss  pubspec.yaml
app/android/: gradle.properties
app/android/app/src/main/: AndroidManifest.xml
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/src/: app.dart  split_view.dart
app/lib/src/home_feature/: home_view.dart
app/lib/src/localization/: app_en.arb
app/linux/flutter/: generated_plugins.cmake
app/macos/: Podfile
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugins.cmake
blabla/: README.md  ffigen.yaml  pubspec.yaml
blabla/android/: .gitignore  build.gradle
blabla/android/src/main/: AndroidManifest.xml
blabla/ios/: blabla.podspec
blabla/ios/Classes/: blabla.cpp
blabla/lib/: blabla.dart  blabla_bindings_generated.dart
blabla/linux/: .gitignore  CMakeLists.txt
blabla/macos/: blabla.podspec
blabla/src/: CMakeLists.txt  blabla.cpp  blabla.h
blabla/windows/: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Cuda.cmake  Linker.cmake  Sanitizers.cmake
install/iOS/opencv/include/opencv4/opencv2/: cvconfig.h
install/iOS/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
install/macOS/opencv/include/opencv4/opencv2/: cvconfig.h
install/macOS/opencv/lib/cmake/opencv4/: OpenCVModules.cmake
scripts/: build_ffmpeg_macos.sh  fix_macos_dylibs.zsh  install_deps_android.sh  install_deps_ios.sh  install_deps_macos.sh  make_android.sh  make_iOS.sh  make_linux.sh  make_macOS.sh  make_windows.ps1  setup_environment.ps1  setup_environment.sh  sign_windows.ps1
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_executable/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt
test/: CMakeLists.txt  constexpr_tests.cpp
test_repo/: .clang-format  .clang-format-objc  .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake
test_repo/cmake/: Hardening.cmake  PackageProject.cmake  StaticAnalyzers.cmake
test_repo/cmake/modules/: FindFFmpeg.cmake  ndk-stl-config.cmake
test_repo/cmake/toolchain/: linux-arm64.cmake  toolchain-arm64.cmake
test_repo/include/test_repo/: camera_type.hpp  constants.hpp  export_macros.hpp  flir_camera.hpp  frame.hpp  frame_grabber_base.hpp  sample_library.hpp  ts_frame_extractor.hpp  ts_grabber.hpp
test_repo/src/: CMakeLists.txt
test_repo/src/ftxui_sample/: CMakeLists.txt  main.cpp
test_repo/src/sample_executable/: CMakeLists.txt  main.cpp
test_repo/src/sample_library/: CMakeLists.txt  flir_camera.cpp  flir_camera.mm  frame_grabber_base.cpp  sample_library.cpp  ts_frame_extractor.cpp  ts_grabber.cpp
test_repo/test/: CMakeLists.txt  constexpr_tests.cpp  test_frame_grabbers.cpp  tests.cpp
